# imperium

./: Cargo.toml  build.rs
shaders/src/: std_geom_f.glsl  std_geom_v.glsl  std_mesh_f.glsl  std_mesh_v.glsl  std_texture_f.glsl  std_texture_v.glsl
src/: lib.rs
src/app/: mod.rs
src/buffer/: mod.rs
src/command/: mod.rs
src/component/: mod.rs
src/core/: mod.rs
src/input/: mod.rs
src/node/: mod.rs
src/physics/: mod.rs
src/pipeline/: mod.rs
src/render/: mod.rs
src/scene/: mod.rs
src/script/: mod.rs
src/shader/: mod.rs
src/spatial/: light.rs  material.rs  mesh_pipeline.rs  mod.rs  pass.rs  sys.rs
src/spatial/light/: mod.rs
src/spatial/model/: mod.rs
src/spatial/pipe/: mesh.rs
src/texture/: mod.rs
src/types/: mod.rs
src/window/: mod.rs
