[package]
name = "imperium_core"
version = "0.1.0"
authors = ["Imperium Studios"]


[dependencies]
image = "~0.19.0"
winit = "=0.17.2"
cgmath = "0.14.*"
# Mesh loading engine (there are rust alternatives however they are less developed).
assimp-sys = "0.3.1"
libc = "0.2.44"
colored = "1.6.1"
# Physics engine.
nalgebra = "0.16.12"
ncollide3d = "0.17.3"
nphysics3d = "0.9.4"


[dependencies.gfx-hal]
git = "https://github.com/gfx-rs/gfx"
rev = "7b7a6353"

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
git = "https://github.com/gfx-rs/gfx"
rev = "7b7a6353"

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
git = "https://github.com/gfx-rs/gfx"
rev = "7b7a6353"

#[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.gfx-backend-vulkan]
[dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx"
rev = "7b7a6353"

[build-dependencies]
glsl-to-spirv = "=0.1.6"