[package]
name = "imperium"
version = "0.1.0"
authors = ["Imperium Studios"]
edition = "2018"


[dependencies]

# Renderer
gfx-hal = "0.1.0"
gfx-backend-vulkan = "0.1.0"

image = "~0.19.0"
winit = "0.18.1"
cgmath = "0.14.*"
# Mesh loading engine (there are rust alternatives however they have less features).
# Note: this library requires the use of pointers.
assimp-sys = "0.3.1"
libc = "0.2.44"
colored = "1.6.1"
# Entity Component System
specs = "0.14.3"
specs-hierarchy = "0.3.0"
# Physics engine.
nalgebra = "0.16.12"
ncollide3d = "0.17.3"
nphysics3d = "0.9.4"

[build-dependencies]
glsl-to-spirv = "=0.1.6"
